# nix-fast-build-action

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  DESIGN.md  OVERVIEW.md  README.md  THREAT-ACTORS.md  TODO.md  action.yml  flake.nix  lib.nix  mkbuildcontainer.nix  mkseed.nix  pyproject.toml
.github/workflows/: build-container.yaml  build-seed.yaml  build.yml  check.yaml  runner-tools.yaml  seed.yaml
examples/cpp-boost/: CMakeLists.txt  flake.nix  main.cpp
examples/github/: default.nix  flake.nix  project.yaml  seed.yaml
examples/python/: flake.nix  pyproject.toml
examples/rust-app/: flake.nix
modules/: seedcfg.nix
scripts/: toolchain_churn.py
src/nix_seed_tools/: __init__.py  nix_path_mermaid.py
tests/: e2e.nix  examples.nix  functional-flake.nix  functional.nix  functional.py  test_nix_path_mermaid.py  unit.nix
