[build-system]
requires = ["setuptools==80.9.0", "wheel==0.46.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nix-seed-tools"
version = "0.1.0"
description = "Nix path mermaid graph generator."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = ["typer==0.19.2"]

[project.scripts]
nix-path-mermaid = "nix_seed_tools.nix_path_mermaid:app"

[project.optional-dependencies]
test = [
  "pytest==8.4.2",
  "pytest-cov==6.2.1",
  "pytest-randomly==3.13.0",
  "pytest-xdist==3.8.0",
]

[tool.pytest.ini_options]
addopts = "--cov=nix_seed_tools --cov-branch"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
